# lazyscript

./: .clang-format  .gitattributes  .gitignore  .jscpd.json  AGENTS.md  CHANGELOG.md  Doxyfile  Makefile.am  README.md  _tmp_test.lsti  configure.ac  conftest.l  ideas.md  package.json  parser.output  tmp_comments.ls  tmp_comments2.ls  tmp_comments3.ls  tmp_comments4.ls  tmp_list_min.ls  tmp_lt_test.ls  tmp_only_top.ls  tmp_pat_test1.ls  tmp_top_eol.ls
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS
.github/user-instruction/: archive0002.md  current.md
.github/workflows/: ci.yml  forbid-prelude-host.yml  format.yml  guard-no-plusplus.yml  policy-guard.yml  spec-guard.yml  test-driven-guard.yml
conftest/: choice_chain_all_lam.ls  choice_chain_mix.ls  choice_int_lam.ls  choice_lam_int.ls  choice_lam_lam.ls  format_choice.ls
docs/: 01_lexing.md  02_parsing.md  03_semantics.md  04_core_ir.md  05_syntax_sugar.md  06_typecheck.md  07_effect_types.md  08_llvmir_plan.md  09_list_syntax_and_library.md  10_namespaces.md  11_runtime_trace.md  12_builtins_and_prelude.md  13_stdlib_plan.md  14_namespace_impl_plan.md  15_stdlib_impl_plan.md  16_coreir_to_llvm_checklist.md  17_type_system_extensions.md  18_compiler_runtime_split.md  18_lstr_ir_redesign.md  90_backlog.md  91_sprint_backlog.md  WIP-2025-08-21.md  WIP-2025-08-28.md  lsti-adoption-plan.md  lstr_to_llvmir.md  parser-bnf.md  requirements-status.md  thunk-binary-format.md
docs/spec/: README.md  bottom-and-caret.md
lib/: List.ls  Ns.ls  NsLocalDemo.ls  Option.ls  Prelude.ls  PreludeInit.ls  README.md  Result.ls  String.ls  Tmp.ls  list.ls  ns.ls  ns_local_demo.ls  option.ls  result.ls  std.ls  string.ls
logs/: lizard.txt  lizard_src.txt  lizard_src_highccn.txt  loc.txt
scripts/: check-format.sh  check_forbidden_files.sh  check_lexer_token_order.sh  check_reasoning_guards.sh  forbid_implicit_fallbacks.sh  format-staged.sh  gc_repro_loop.sh  guard_no_plusplus.sh  spec_guard.sh
scripts/git-hooks/: pre-commit
src/: Makefile.am  alge.c  alge.h  appl.c  appl.h  array.c  array.h  as.c  as.h  belist.c  belist.h  bind.c  bind.h  closure.c  closure.h  ealge.c  ealge.h  eappl.c  eappl.h  eclosure.c  eclosure.h  eenv.c  eenv.h  elambda.c  elambda.h  elist.h  env.c  env.h  eref.c  eref.h  erref.c  erref.h  eval.c  eval.h  expr.c  expr.h  hash.c  hash.h  int.c  int.h  (+53 more)
src/builtins/: arith.c  builtin_loader.c  builtin_loader.h  dump.c  ns.c  ns.h  prelude.c  prelude.h  print.c  require.c  seq.c  to_string.c
src/common/: Makefile.am  array.c  array.h  const.c  const.h  hash.c  hash.h  int.c  int.h  io.c  io.h  list.c  list.h  loc.c  loc.h  malloc.c  malloc.h  ref.c  ref.h  str.c  str.h
src/coreir/: Makefile.am  cir_callconv.c  cir_callconv.h  cir_effects_type.c  cir_eval_runtime.c  cir_internal.h  cir_lower_print.c  cir_text_reader.c  coreir.c  coreir.h  coreir_clean.c
src/expr/: Makefile.am  ealge.c  ealge.h  eappl.c  eappl.h  echoice.c  echoice.h  eclosure.c  eclosure.h  eenv.c  eenv.h  elambda.c  elambda.h  elist.c  elist.h  enslit.c  enslit.h  eref.c  eref.h  erref.c  erref.h  expr.c  expr.h
src/llvmir/: Makefile.am  llvmir.h  llvmir_emit.c
src/lstr/: Makefile.am  lstr.h  lstr_internal.h  lstr_print.c  lstr_to_thunk.c  lstr_validate.c  thunk_to_lstr.c
src/misc/: Makefile.am  belist.c  belist.h  bind.c  bind.h  prog.c  prog.h
src/parser/: Makefile.am  lexer.l  parser.output  parser.y
src/pat/: Makefile.am  palge.c  palge.h  pas.c  pas.h  pat.c  pat.h  plist.c  plist.h  pref.c  pref.h
src/plugins/: Makefile.am  builtins_ns.c  core_builtins.c  demo_builtin.c  plugin_common.h  prelude_plugin.c
src/runtime/: builtin.h  effects.c  effects.h  error.h  modules.c  modules.h  trace.c  trace.h  unit.h
src/thunk/: Makefile.am  eenv.h  lsti.c  lsti.h  memo.md  menv.h  nslit_eval.c  nslit_eval.h  talge.c  talge.h  tappl.c  tappl.h  tbind.h  tchoice.c  tchoice.h  tclosure.c  tclosure.h  tenv.c  tenv.h  thunk.c  thunk.h  thunk_bin.h  tlambda.c  tlambda.h  tlist.c  tlist.h  tpat.c  tpat.h  tref.c  tref.h  trref.c  trref.h
src/tools/: cli_common.c  cli_common.h  lazyscriptc_main.c  llvm_emit_common.c  llvm_emit_common.h  lscoreir_main.c  lslsti_check.c  lslstr_dump.c  lslstr_roundtrip.c  lslstr_to_llvmir.c  lstr_prog_common.c  lstr_prog_common.h  lstr_to_llvmir.c
test/: README.md  a.ls  b.ls  inc_hello.ls  lib_req.ls  pure_mod.ls  r90_fmt_pure_dot_chain.fmt.out  r90_fmt_pure_dot_chain.ls  r91_parse_dotdot_invalid.ls  r92_parse_nonlambda_bar_invalid.ls  r92_parse_nonlambda_bar_invalid.out  run-regressions.sh  run-tests.sh  skip.list  t01_add.ls  t02_println.ls  t03_seq.ls  t04_lambda_id.fmt.out  t04_lambda_id.ls  t05_let_without_keyword.ls  t06_coreir_ifthenelse.coreir.out  t07_coreir_effect.ls  t08_coreir_chain.ls  t08_coreir_chain.out  t09_coreir_return.ls  t10_coreir_nslit.coreir.out  t10_coreir_nslit.ls  t10_sugar_println.ls  t12_do_seq.ls  t13_do_bind.ls  t14_type_arity_error.ls  t14_type_arity_error.type.out  t15_runtime_require.ls  t15_runtime_require.out  t16_runtime_def.ls  t16_runtime_def.out  t17_or_pat_ok.ls  t18_or_pat_newvar.ls  t18_or_pat_newvar.out  t19_or_pat_missingvar.ls  (+176 more)
test/coreir/: skip.list  t06_coreir_ifthenelse.ls  t07_coreir_effect.coreir.out  t07_coreir_effect.ls  t11_coreir_match_no_case.coreir.out  t11_coreir_match_no_case.ls  t11_coreir_match_no_case.out
test/ns/: t29_ns_literal.ls  t30_ns_literal_use.ls
test/runtime/: t01_add.ls  t01_add.pipe.ok  t02_println.ls  t03_seq.ls  t03_seq.out  t10_sugar_println.ls  t11_sugar_return.ls  t12_do_seq.out  t26_require_idempotent.ls  t26_require_idempotent.out
test/stdlib/: t20_list_sugar.ls  t20_list_sugar.out  t21_list_lib_req.ls
vscode-extension/lazyscript-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  extension.js  language-configuration.json  package.json
vscode-extension/lazyscript-vscode/syntaxes/: lazyscript.tmLanguage.json
