noinst_LTLIBRARIES = liblscommon.la

liblscommon_la_CFLAGS = $(AM_CFLAGS) $(GC_CFLAGS) -I..

liblscommon_la_SOURCES = \
    array.c \
    array.h \
    hash.c \
    hash.h \
    int.c \
    int.h \
    list.c \
    list.h \
    io.c \
    io.h \
    loc.c \
    loc.h \
    malloc.c \
    malloc.h \
    str.c \
    str.h
