AM_CFLAGS = -O0 -g -Wall -Wextra -Werror -I..

noinst_LIBRARIES = liblsexpr.a

liblsexpr_a_CFLAGS = $(AM_CFLAGS) $(GC_CFLAGS)

liblsexpr_a_SOURCES = \
    ealge.c \
    ealge.h \
    eappl.c \
    eappl.h \
    eclosure.c \
    eclosure.h \
    eenv.c \
    eenv.h \
    elambda.c \
    elambda.h \
    elist.c \
    elist.h \
    eref.c \
    eref.h \
    erref.c \
    erref.h \
    expr.c \
    expr.h
