noinst_LTLIBRARIES = liblsexpr.la

liblsexpr_la_CFLAGS = $(AM_CFLAGS) $(GC_CFLAGS) -I..

liblsexpr_la_SOURCES = \
    ealge.c \
    ealge.h \
    eappl.c \
    eappl.h \
    eclosure.c \
    eclosure.h \
    eenv.c \
    eenv.h \
    elambda.c \
    elambda.h \
    elist.c \
    elist.h \
    eref.c \
    eref.h \
    erref.c \
    erref.h \
    expr.c \
    expr.h
