noinst_LTLIBRARIES = liblsexpr.la

liblsexpr_la_CFLAGS = $(AM_CFLAGS) $(GC_CFLAGS) -I..

liblsexpr_la_SOURCES = \
    ealge.c \
    ealge.h \
    eappl.c \
    eappl.h \
    echoice.c \
    echoice.h \
    eclosure.c \
    eclosure.h \
    enslit.c \
    enslit.h \
    elambda.c \
    elambda.h \
    elist.c \
    elist.h \
    expr.c \
    expr.h
