AM_CFLAGS = -O0 -g -Wall -Wextra -Werror -I..

noinst_LIBRARIES = liblsthunk.a

liblsthunk_a_CFLAGS = $(AM_CFLAGS) $(GC_CFLAGS)

liblsthunk_a_SOURCES = \
    talge.c \
    talge.h \
    tappl.c \
    tappl.h \
    tclosure.c \
    tclosure.h \
    tenv.c \
    tenv.h \
    thunk.c \
    thunk.h \
    tlambda.c \
    tlambda.h \
    tlist.c \
    tlist.h \
    tref.c \
    tref.h