noinst_LTLIBRARIES = liblsthunk.la

liblsthunk_la_CFLAGS = $(AM_CFLAGS) $(GC_CFLAGS) -I..

liblsthunk_la_SOURCES = \
    talge.c \
    talge.h \
    tappl.c \
    tappl.h \
    tchoice.c \
    tchoice.h \
    tclosure.c \
    tclosure.h \
    thunk.c \
    thunk.h \
    tlambda.c \
    tlambda.h \
    tlist.c \
    tlist.h \
    tref.c \
    tref.h